# music

./: Actions.qml  CMakeLists.txt  Content.qml  Dialogs.qml  Footer.qml  Main.qml  freemusic.js  main.cpp
